@@ -760,9 +760,19 @@ Datum transform(PG_FUNCTION_ARGS)
 	geom = (PG_LWGEOM *)PG_DETOAST_DATUM_COPY(PG_GETARG_DATUM(0));
 	if (pglwgeom_getSRID(geom) == -1)
 	{
-		pfree(geom);
+		PG_FREE_IF_COPY(geom, 0);
 		elog(ERROR,"Input geometry has unknown (-1) SRID");
 		PG_RETURN_NULL();
+	}
+
+	/*
+	 * If input SRID and output SRID are equal, return geometry
+	 * without transform it
+	 */
+	if (pglwgeom_getSRID(geom) == result_srid)
+	{
+		pfree(geom);
+		PG_RETURN_POINTER(PG_GETARG_DATUM(0));
 	}
 
 	/*
